# pypi-deploy-test

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-test-pypi.yml
scripts/: install_ccache.sh  install_eigen.sh  install_hdf5.sh  install_highway.sh
src/: add.cpp  add.h  bindings.cpp  filesystem.cpp  filesystem.h  filesystem_compat.h  hwy_target.cpp  hwy_target.h  lib_versions.cpp  lib_versions.h
