[project]
name = "example_package_1_bnprks"
version = "0.0.1"
authors = [
  { name="Ben Parks", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bnprks/pypi-deploy-test"
Issues = "https://github.com/bnprks/pypi-deploy-test/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"